<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bottom_bar_hight">

    <RelativeLayout
        android:id="@+id/rlMainIndex"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivMainIndex"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_nav_sy_nor" />

            <TextView
                android:id="@+id/tvMainIndex"
                style="@style/index_bottom_text"
                android:text="@string/home_index" />
        </LinearLayout>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rlMainDirector"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivMainDirector"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_home_jztg_nor"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/tvMainDirector"
                style="@style/index_bottom_text"
                android:text="@string/home_information" />
        </LinearLayout>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rlMainMe"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivMainMe"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_nav_wd_nor"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/tvMainMe"
                style="@style/index_bottom_text"
                android:text="@string/home_me" />
        </LinearLayout>

    </RelativeLayout>


</LinearLayout>
